syntax = "proto3";

//Specify package to use for our generated classes
//If no explicit java_package is given
option java_package="io.protocol.grpc02";

option java_multiple_files=true;
option java_outer_classname="RouteGuideProto";


//Define a service
service RouteGuide{

  rpc GetFeature(Point) returns (Feature){}
  rpc ListFeature(Rectangle) returns(stream Feature){}
  rpc RecordRoute(stream Point) returns(RouteSummary){}
  rpc RouteChat(stream RouteNote) returns(stream RouteNote){}
}

message Point{
  int32 latitude=1;
  int32 longitude=2;
}

message Rectangle{
  Point lo=1;
  Point hi=2;
}

message Feature{
  string name=1;
  Point location=2;
}

// Not used in the RPC.  Instead, this is here for the form serialized to disk.
message FeatureDatabase {
  repeated Feature feature = 1;
}

message RouteNote{
  Point location=1;
  string message=2;
}

message RouteSummary{
  int32 point_count=1;
  int32 feature_count=2;
  int32 distance=3;
  int32 elapsed_time=4;
}


